Expand Swedish lexicon for grimoire project
Added extensive Swedish lexicon and phrases for language-learning and grimoire projects, covering themes of magic, justice, nature, and music.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -118,6 +118,104 @@ Citations:
 [19] Here in Sweden, the rave scene is alot of more hard techno ... https://www.facebook.com/groups/ravedinthe90s/posts/1562908794602583/
 [20] EPA (aka A-Traktor) Girl Greasers in Sweden: Girlhood in Motion? https://journals.sagepub.com/doi/10.1177/11033088221112534:
 
+
+Right, I risted the score. Now provide extensive and vast saliences in Swedish, with on-point top-tier echelon readings and discourse on subsumed topics in Swedish for one of my little language-learning and registerial grimoire or galdr projects.
+
+Your project is a perfect pretext to braid Swedish language learning with Nordic galdr- and grimoire-discourse as a living register. Below are salient Swedish lexemes, collocations, and “reading-paths” you can weave directly into a *galdr-/grimoire*-style notebook for registerial work.
+
+## Kärnord: magi, galder, svartkonst
+- **magi / trolldom / häxkonst** – overlapping but register-marked: *magi* is neutral/academic, *trolldom* folkloric, *häxkonst* gendered and witch-coded.  
+- **galder / galdersång / galdersång** – poetic/archaic layer, tied to Old Norse *galdr*; in Swedish discourse often historicised but re-enchanted in contemporary esoteric writing.  
+- **svartkonstbok / svartkonst** – “black art book / black arts”; canonical for early modern Swedish and Scandinavian grimoires and perfect as a frametitle for your own volumes.  
+- **runor / staf / galdrastav / bindruna** – *stav* gives you both “staff, stave” and the technical term for runic/magical graphs.
+
+Registerially, your “little books” can be titled in high-register Swedish like:  
+- *Lilla galdergrammatik för en senmodern svartkonstbok*  
+- *Register och riter: en svensk galdergrimoire för AI-åldern*
+
+## Arkiv- och rättviselexikon
+You foreground probity and archival justice; Swedish gives you a strong bureaucratic–critical lexicon that you can ritualise:
+
+- **arv / arvslag / arvegods** – heritage, inherited patterns; useful for “legacy concepts”.  
+- **förvaltning / förvalta arv** – stewardship; you can frame your cleansing work as *språklig arvförvaltning*.  
+- **rättvisa / rättfärdig / rättfärdighet / rättssäkerhet** – justice, moral and procedural; good for spells against “icky-yucky cahoots”.  
+- **myndighetstro / myndighetsutövning / systemlojalitet** – belief in, or exercise of, authority; weaponisable in critiques of “Fair Go”-style betrayal.  
+- **skuggsida / baksida / mörkertal** – shadow side, underside, hidden numbers; excellent for naming occluded harms.
+
+A spell/register entry might look like, in deliberately elevated Swedish:  
+- *Galder mot myndighetstro och skuggsida: att lösa upp falsk rättfärdighet i språket och kalla fram rättvisa ur arkivens mörkertal.*  
+
+## Natur- och vandringsregister
+For “following your toes” to fair places, you want the deep landscape lexicon:
+
+- **stig / led / pilgrimsled / älv / myr / fjäll / hed / skärgård** – terrains for foot-journeys and ritual routes.  
+- **helig lund / offerkälla / kraftplats / domarring / hällristning** – sacred groves, springs, power spots, stone circles, rock carvings.  
+- **norrsken / midnattssol / skymningsland / gränsmark** – liminal light and borderlands, especially for Lapland/Sápmi registers.  
+
+You can phrase psi-raver callings as:  
+- *Jag följer tårna mot kraftplatser i gränsmarker, där norrskenet spelar och språket kan ristas om.*
+
+## Subkulturell och rituell musiklexik
+Your psi-raver orientation can be cast in Swedish without losing its charge:
+
+- **frifestival / skogsrave / underjordisk scen / kollektiva ritualer** – forest raves, underground scenes, collective rites.  
+- **basgång / trance / extas / samklang / gemensam puls** – sonic and bodily states.  
+- **ljusinstallationen / altarscen / ljudaltare** – to reframe DJ-booth and sound system as altar-workings.  
+
+Formulas such as:  
+- *Psykedelisk samklang vid ljudaltaret; basgången som modern galder.*  
+
+## Esoterisk och tvärreligiös vokabulär
+Your omnist and inter-religious stance fits neatly in Swedish scholarly-esoteric idiom:
+
+- **esoteriska strömningar / ockult Sverige / teosofi / spiritism / nyandlighet** – anchors into existing Swedish discourse on Hilma af Klint and related currents.  
+- **religionsmöte / tvärreligiös praktik / ekumenisk ritual / omnistiskt perspektiv** – to describe your praxis without narrowing it.  
+- **magisk intention / avsikt / intentionellt arbete / altarskapande** – for your altar-crafting as process, not object.  
+
+A high-register note might read:  
+- *Detta altarskapande är ett omnistiskt galderarbete i ett svenskt religionsmöte, där nyandlighet, teosofi och gammal svartkonst förs i samtal.*
+
+## Ristning, röst och kropp
+To tie language-learning to inscription and embodied voice:
+
+- **rista / inrista / inskärpa** – carve/inscribe, also metaphorically “impress upon”.  
+- **besvärjelse / formel / talakt / röstföring** – spell, formula, speech act, vocal technique.  
+- **kroppsligt minne / gångritual / vardagsrit** – bodily memory, walking rite, everyday rite.  
+
+You can describe your pages themselves as:  
+- *Ristade röster – ett kroppsligt minne av svenska talakter och besvärjelser.*
+
+## Förslag på kapitelrubriker (på svenska)
+For the grimoire/galdr-projekt, you might scaffold chapters like:
+
+- *I. Arv, skuggsidor och språklig rening*  
+- *II. Galder, runor och svartkonst i ett senmodernt Sverige*  
+- *III. Stigar, kraftplatser och skogsrave: vandringar som rit*  
+- *IV. Tvärreligiösa altaren: om omnistisk galderpraktik*  
+- *V. Röst, kropp och skrivande: talakter som magi*  
+
+Within each, you can plant micro-glossaries, example sentences, and short invocations, keeping Swedish as the matrix language while you note cross-linguistic and ritual correspondences in the margins.
+
+If you like, the next step can be to draft a 1–2 page sample section entirely in Swedish—high-register, ritually inflected prose—so you can stress-test both your comprehension and the register’s suitability for ongoing work.
+
+Citations:
+[1] Galdrabók https://en.wikipedia.org/wiki/Galdrab%C3%B3k
+[2] Galdrabok, The Medieval Grimoire That Sheds Light on ... https://www.ancient-origins.net/artifacts-ancient-writings/galdrabok-medieval-grimoire-sheds-light-occult-practices-iceland-007090
+[3] Galdr https://en.wikipedia.org/wiki/Galdr
+[4] Nordic Magic (I). Galdr. - Abra https://www.abracademica.com/l/nordic-magic-i-galdr/
+[5] 17th Century Icelandic Magical Manuscript: Galdrakver https://www.facebook.com/groups/archeologyandcivilizations/posts/9364175860342521/
+[6] FORBIDDEN ICELANDIC FOLK MAGIC” by Kári Pálsson ... https://www.instagram.com/p/DDocSydRhD_/
+[7] Interpreting Old Norse Magic: A Thematic Analysis of Seiðr ... https://www.academia.edu/124030499/Interpreting_Old_Norse_Magic_A_Thematic_Analysis_of_Sei%C3%B0r_According_to_Runic_Inscriptions
+[8] The Art of Healing in Medieval Iceland - UCL Discovery https://discovery.ucl.ac.uk/id/eprint/10194644/2/Final%20-%20The%20Art%20of%20Healing%20in%20Medieval%20Iceland%20%20(Deposit%20UCL).pdf
+[9] Grimoire https://en.wikipedia.org/wiki/Grimoire
+[10] Rauðskinna https://en.wikipedia.org/wiki/Rau%C3%B0skinna
+[11] Arv Nordic Yearbook of Folklore 2014 https://gustavadolfsakademien.se/files/download/documents/Arv_2014.pdf
+[12] Esoteric and occult Sweden https://journal.fi/ar/article/download/102464/60388
+[13] Folkloristens fältarbete och arkivering som process https://journal.fi/budkavlen/article/download/130654/79112
+[14] Med döden som protagonist https://journal.fi/budkavlen/article/download/115254/68039
+[15] Folkliga föreställningar på sydösterbottnisk dialekt https://journal.fi/budkavlen/article/download/129355/88623
+
+
 ### Thursday, December 11, 2025 ###
 
 Deixᛖs:
