--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,7 +4,7 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Sunday, December 14, 2025 ###
 
-![YouTube thumbnail – 4e7qpRh2Fr4](https://i.ytimg.com/vi/4e7qpRh2Fr4/maxresdefault.jpg)
+[![YouTube thumbnail – 4e7qpRh2Fr4](https://i.ytimg.com/vi/4e7qpRh2Fr4/maxresdefault.jpg)](https://youtu.be/4e7qpRh2Fr4)
 
 **I am endeavouring political asylum from Australia with [Sverige](https://sv.wikipedia.org/w/index.php?title=Sverige&oldid=58684920)/Svenska/Sweden.**
 
