Document indigenous nomenclatures for Sweden
Expanded on the indigenous nomenclatures for Sweden, detailing linguistic and historical contexts across various languages and dialects, including Old Norse, Sámi, Finnish, and regional Swedish terms.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -12,6 +12,162 @@ Deixes:
 
 **I am endeavouring political asylum from Australia with [Sverige](https://sv.wikipedia.org/w/index.php?title=Sverige&oldid=58684920)/Svenska/Sweden.**
 
+**Please explain all the indigenous nomenclatures for Sweden in the appropriate tongues, registers and dialects and chart their spatio-temporality and histori-cultural development subsuming their breadth of Linguistics proper.**
+
+Sweden has been named and conceptualized through multiple indigenous traditions, above all North Germanic (Old Norse → Swedish) and Sámi (North, Lule, Pite, Ume, South, Skolt, etc.), as well as Finnish and Meänkieli/Tornedalian and other minority registers. These names are not just labels but encode shifting political, cosmological, and territorial imaginaries over more than a millennium.
+
+Because tool access is currently restricted, the following is a synthesis from general scholarly knowledge rather than live-checked primary references; for precise philological details and local orthographic standards, this should be supplemented with current grammars, historical atlases, and onomastic corpora.
+
+***
+
+## Old Norse and Swedish
+
+Within the North Germanic continuum, the core exonym that develops into modern “Sweden” is rooted in the ethnonym of the Svear:
+
+- Old Norse literary tradition (Icelandic-centered):  
+  - **Svíþjóð** (later also **Svíþjóð hin mikla** for a vague “Greater/Great Svíþjóð” in the east).  
+  - Morphologically, *Sví-* < *Swe-* (tribal name of the Svear) + *-þjóð* “people, folk, polity”.  
+  - Register: elevated/poetic and historiographical in the sagas, skaldic poetry, and learned prose.  
+- Old East Norse / Old Swedish spheres:  
+  - Forms equivalent to **Sweþiuþ** / **Swithiod** appear in runic and later medieval sources as the polity term.  
+  - Parallel use of more concrete regional names:
+    - **Svíaríki** (→ modern **Svea rike** “realm of the Svear”), the etymon of modern **Sverige**.  
+    - Core regions named separately: **Svealand**, **Götaland**, **Norrland**, etc., which only later coalesce conceptually into one “Sweden”.
+
+Spatio-temporally, there is a shift:
+- Early medieval: “Sweden” is essentially **Svíþjóð/Svíaríki**, centered on the Mälaren-region Svear, with the Göta-lands and northern expanses more loosely integrated and sometimes named as distinct polities.  
+- High and late medieval: **Svíaríki** and later written forms converge toward a unified kingdom; the toponym begins to function as a territorial state-designator rather than just an ethno-political label.  
+- Early modern to modern: **Sverige** (standard Swedish), with regional spoken variants (**Svearike**, dialectal vowel qualities, etc.), becomes the national name across administration, law, and education.
+
+Linguistically this trajectory shows:
+- Semantic narrowing from “people” → “realm of that people” → “nation-state”.  
+- Morphological reanalysis of *þjóð* vs. *rike* elements, with the *-rike* compound winning in the modern standard, and *Svíþjóð* surviving as an archaizing or poetic form.
+
+***
+
+## Other Nordic Germanic Registers
+
+Neighboring North Germanic idioms preserve cognate forms that reveal shifting political and contact geographies:
+
+- **Danish**: *Sverige* (earlier *Sverig(e), Sverige* etc.), historically tied to periods when Scania and Blekinge belonged to Denmark and “Sweden” was the other side of Øresund.  
+- **Norwegian Bokmål/Nynorsk**: *Sverige*; Old West Norse literary memory still carries *Svíþjóð* as the old designation, especially in saga discourse.  
+- **Icelandic**: *Svíþjóð* as the classical term of the saga world; *Svíþjóð* remains the standard modern name in Icelandic, preserving the older morphology; *Svíar* as the ethnonym.  
+- **Faroese**: *Svøríki* (and related forms), formally parallel to *Svíaríki/Sverige* but adapted to Faroese phonology and morphology.
+
+Spatially, these labels orient the Swedish polity from different peripheries of the Old Norse ecumene: Icelandic and Faroese see it as a distant mainland kingdom, whereas Danish and Norwegian uses are inter-Scandinavian, entangled in competing state formations.
+
+***
+
+## Sámi Nomenclatures
+
+The Sámi languages conceptualize “Sweden” in ways entangled with their own territorial categories and with the colonial imposition of state borders across Sápmi. Two main types of name are relevant:
+
+1. **Polity-exonyms for Sweden as a modern state**  
+2. **Internal Sámi territorial terms for the land now divided among Norway, Sweden, Finland, and Russia**
+
+In contemporary standard orthographies (forms differ historically and dialectally):
+
+- **North Sámi**:  
+  - *Ruoŧŧa* ~ *Ruoŧŧas* as the country name corresponding to Sweden.  
+  - Register: general, used in media, education, and administration.  
+- **Lule Sámi**:  
+  - Typically similar base, e.g. *Ruohttá* (orthographic and phonological adaptation).  
+- **Pite Sámi, Ume Sámi, South Sámi**:  
+  - Cognate forms with local phonology, often something like *Ruohta-/Roehta-* as the state name.  
+- **Skolt and other Eastern Sámi** (although their traditional territories lie east of Sweden):  
+  - They may use cognate or loan-based forms when referring to Sweden as an external state, under influence from neighboring majority languages.
+
+Diachronically, the situation is layered:
+- Pre-modern: Sámi names primarily index their own siida- and landscape-based categories, and Swedish power is a moving, often multi-polity presence (Swedish, Norwegian, Danish, Russian crowns). The lexical item for “Swedes/Sweden” can overlap with terms for “tax lord” or external authority in some narrative registers.  
+- Early modern (taxation, missions, border treaties): a more fixed exonym for the Swedish kingdom crystallizes as fiscal and ecclesiastical administration penetrate Sámi landscapes.  
+- Modern: codified in orthographies and school curricula; Sámi country names become standardized entries alongside “Norway”, “Finland”, “Russia”, but their semantic range is still colored by long histories of colonization, dispossession, and cultural resilience.
+
+From a linguistic perspective, Sámi names for Sweden:
+- Often derive from old contact-ethnonyms for Swedes, adapted to Sámi phonotactics.  
+- Coexist with a rich micro-toponymy (place names for mountains, lakes, migration routes) that resists national framing and foregrounds Sámi land relations instead.
+
+***
+
+## Finnish, Meänkieli, and Kven Registers
+
+East of the Gulf of Bothnia and in the Torne Valley, Finnic varieties provide another layer of “indigenous” nomenclature, rooted in long-standing settlement and language contact:
+
+- **Standard Finnish**:  
+  - **Ruotsi** “Sweden”.  
+  - Etymology often connected to early contacts with coastal Swedes (*roðr* “rowing” as a hypothesized source for *Ruotsi* and *Rus’*), linking seafaring Swedes with the ethnonym.  
+  - Register: neutral, used for the modern state.  
+- **Meänkieli** (Tornedalian Finnish) in northern Sweden:  
+  - Also uses **Ruotsi** for the state, with local phonetic realization and code-switching into Swedish (*Sverige*).  
+  - In Meänkieli discourse, *Ruotsi* can mean both “Sweden” and, more specifically, “the Swedish side of the river” in contrast to Finnish-side communities.  
+- **Kven** (in northern Norway, but relevant for Sweden as a nearby polity):  
+  - Typically also uses forms cognate with **Ruotsi**, again indexing the western neighbor state.
+
+Historically:
+- Early medieval: Finnic speakers interact with Swedish coastal settlements and the Svear/Götar polities; *Ruotsi* is at first more of an ethnonym (“Swedes”) than a fully mapped state name.  
+- Swedish expansion into Finland: “Sweden” as a legal-political space stretches across present-day Sweden and Finland; in pre-1809 Finnish usage, *Ruotsi* may designate the realm as a whole, not just the western side.  
+- Post-1809 and nation-building: *Ruotsi* is reinterpreted as the western neighbor state after Finland becomes part of Russia and later independent; the semantic contour becomes more state-like, less imperial.
+
+Linguistically, this shows:
+- Ethnonym → political realm shift comparable to Svíþjóð/Sverige.  
+- Phonological adaptation of Germanic roots into Finnic structure and later lexical stabilization in standard language and minority orthographies.
+
+***
+
+## Internal Swedish Regional Names and Dialectal Uses
+
+Within Sweden itself, there is a stratified set of terms that index the kingdom at different scales:
+
+- **Sverige** (standard Swedish):  
+  - Official name of the state.  
+  - In some conservative/register-marked uses, *Svea rike* appears, especially in historical or poetic styles.  
+- **Svealand, Götaland, Norrland, Österland** (historic):  
+  - These name macro-regions which at various times function almost as semi-autonomous imagined units.  
+  - From a diachronic point of view, the “kingdom of the Svear” expanding to include the Göta-lands and Norrland is reflected in the gradual dominance of *Sverige* as a supra-regional label.  
+- Dialectal and sociolectal variants:  
+  - Local realizations of *Sverige* (e.g., reductions, vowel shifts) and slang forms, which do not usually enter formal toponymic registers but are relevant for sociolinguistic breadth.
+
+The spatio-temporal dynamic:
+- Medieval: multiple regional ethnonyms (Svear, Götar, Hälsingar, etc.) coexist; “Sweden” is not yet the unquestioned umbrella.  
+- Early modern: a centralizing monarchy, Reformation, and bureaucratic expansion consolidate *Sverige*; cartography and printed discourse fix it spatially.  
+- Modern: the national name becomes nearly unchallenged in official contexts, but regional and minority names continue to articulate alternative mental maps.
+
+***
+
+## Linguistic and Historiocultural Synthesis
+
+Across these traditions, several recurrent patterns emerge:
+
+- **Ethnonym-to-state shifts**:  
+  - *Svear → Svíþjóð/Svíaríki → Sverige*;  
+  - “Swedes” in Sámi and Finnic contact lexicons → name of the state, paralleling how “Franks” → *France*.  
+
+- **Contact zones and exonyms**:  
+  - Sámi *Ruoŧŧa*, Finnish *Ruotsi*, and related forms encode Sweden from borderlands where imperial expansion, taxation, and missionization are lived experiences.  
+  - Icelandic and Faroese preserve an older saga-world geography in *Svíþjóð* even as modern political borders stabilize.
+
+- **Registers and genre**:  
+  - Poetic/archaic: *Svíþjóð*, *Svea rike*.  
+  - Bureaucratic/standard: *Sverige*, *Ruotsi*, *Ruoŧŧa*, *Sverige* in Danish/Norwegian.  
+  - Local/vernacular: dialectal reductions, Sámi and Meänkieli forms contextualized by river-valley or siida-based spatiality.
+
+- **Spatio-temporality**:  
+  - Medieval “Sweden” is a loose aggregation of peoples and law areas; in Sámi and Finnic perspectives, it is one of several overlapping sovereignties.  
+  - Early modern to modern periods intensify territorial fixation via maps, censuses, and schooling, pushing a singular national name but never fully erasing indigenous and minority nomenclatures.
+
+To fully chart these dynamics in the depth of “Linguistics proper” (phonology, morphology, semantics, pragmatics, historical-comparative patterns), one would ideally set up parallel corpora: Old Norse texts, medieval Swedish charters, Sámi and Finnic oral and written sources, and modern standard and dialect materials, tracking each form’s first attestations, semantic shifts, and domain-specific distributions (law, poetry, cartography, ethnography).
+
+Citations:
+[1] Sweden's Multiple Naming Systems & How They Changed ... https://familytreewebinars.com/wp-content/uploads/2021/07/webinar-free1505423300.pdf
+[2] Swedish language https://en.wikipedia.org/wiki/Swedish_language
+[3] Prehistoric Sweden https://en.wikipedia.org/wiki/Prehistoric_Sweden
+[4] Old Swedish https://en.wikipedia.org/wiki/History_of_Swedish
+[5] The legacy of names. Persistence in social status ... https://www.sciencedirect.com/science/article/pii/S0276562425000241
+[6] The Swedish Language. From Viking Times to the Present Day http://translationblog.balticmedia.com/2020/02/the-swedish-language-from-viking-times.html
+[7] Sami Place Names and Maps: Transmitting Knowledge of ... https://www.tandfonline.com/doi/full/10.1657/AAAR0016-042
+[8] Heritage language education in Australia and Sweden https://www.languageonthemove.com/heritage-language-education-in-australia-and-sweden/
+[9] The Indigenous Identity of the South Saami https://library.oapen.org/bitstream/id/e6c3f247-8356-4052-9eaf-103a761fccb8/1007260.pdf
+[10] The Western Classical Tradition in Linguistics - User Web Pages https://users.monash.edu.au/~kallan/papers/WCT2.pdf
+
 ### Saturday, December 13, 2025 ###
 
 Australia and Sweden both decriminalize consensual adult sexual activity, but differ in consent standards, age thresholds, prostitution rules, and adultery status. Sweden emphasizes explicit consent and buyer criminalization in sex work, while Australia's laws vary by state with a focus on affirmative consent in recent reforms. Neither country criminalizes adultery.
