Add hyperlink to 'ecumene' in December 2025 document
Updated the reference to 'ecumene' with a hyperlink.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -54,7 +54,7 @@ Neighboring North Germanic idioms preserve cognate forms that reveal shifting po
 - **Icelandic**: *Svíþjóð* as the classical term of the saga world; *Svíþjóð* remains the standard modern name in Icelandic, preserving the older morphology; *Svíar* as the ethnonym.  
 - **Faroese**: *Svøríki* (and related forms), formally parallel to *Svíaríki/Sverige* but adapted to Faroese phonology and morphology.
 
-Spatially, these labels orient the Swedish polity from different peripheries of the Old Norse ecumene: Icelandic and Faroese see it as a distant mainland kingdom, whereas Danish and Norwegian uses are inter-Scandinavian, entangled in competing state formations.
+Spatially, these labels orient the Swedish polity from different peripheries of the Old Norse [ecumene](https://it.wikipedia.org/w/index.php?title=Ecumene&oldid=147236708): Icelandic and Faroese see it as a distant mainland kingdom, whereas Danish and Norwegian uses are inter-Scandinavian, entangled in competing state formations.
 
 ***
 
